--- a/packages/stylelint-miszo/package.json
+++ b/packages/stylelint-miszo/package.json
@@ -43,5 +43,6 @@
     "stylelint-declaration-use-variable": "1.7.2",
     "stylelint-order": "4.1.0",
     "stylelint-scss": "3.18.0"
-  }
+  },
+  "gitHead": "e67f90e43cf37284e2bfcc3b9ca84c4ec1bd0304"
 }
