--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,7 @@
 {
   "hooks": {
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-    "pre-commit": "lerna run --concurrency 4 --stream pre-commit"
+    "pre-commit": "lerna run --concurrency 4 --stream pre-commit",
+    "pre-push": "yarn run prettier && lerna run --concurrency 4 --stream pre-push",
   }
 }
