--- a/packages/commitlint-config-miszo/.huskyrc
+++ b/packages/commitlint-config-miszo/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "yarn run pre-commit"
+    "pre-commit": "npm run lint:staged",
+    "pre-push": "yarn run prettier:check"
   }
 }
