--- a/packages/eslint-config-miszo/.huskyrc
+++ b/packages/eslint-config-miszo/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "npm run lint:staged"
+    "pre-commit": "npm run lint:staged",
+    "pre-push": "yarn run prettier:check"
   }
 }
