--- a/packages/eslint-config-miszo/.lintstagedrc
+++ b/packages/eslint-config-miszo/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.js": ["npm run eslint:staged"],
-  "**/*.+(js|json|md)": ["npm run format:staged"]
+  "**/*.+(js|json|md)": ["prettier --write"],
+  "*.js": ["eslint --fix"],
 }
