--- a/packages/stylelint-miszo/sonar-project.properties
+++ b/packages/stylelint-miszo/sonar-project.properties
@@ -1,4 +1,9 @@
 sonar.organization=miszo
 sonar.projectKey=stylelint-miszo
+sonar.projectName=stylelint-miszo
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
+sonar.sourceEncoding=UTF-8
+sonar.exclusions=**/node_modules/**
+sonar.verbose=true
+sonar.eslint.reportPaths=reports/eslint.json
