--- a/.github/workflows/sonar-eslint.yml
+++ b/.github/workflows/sonar-eslint.yml
@@ -1,4 +1,4 @@
-name: '[eslint-config-miszo] Sonar Cloud'
+name: /[eslint-config-miszo/] Sonar Cloud
 on:
   push:
     branches:
@@ -16,7 +16,7 @@ jobs:
       PACKAGE_PATH: packages/eslint-config-miszo
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Setup Node version
