--- a/.github/workflows/sonar-eslint.yml
+++ b/.github/workflows/sonar-eslint.yml
@@ -1,10 +1,8 @@
-name: /[eslint-config-miszo/] Sonar Cloud
+name: eslint-config-miszo Sonar Cloud
 on:
   push:
     branches:
       - main
-    paths:
-      - 'packages/eslint-config-miszo/**'
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
