--- a/packages/eslint-config-miszo/package.json
+++ b/packages/eslint-config-miszo/package.json
@@ -30,13 +30,14 @@
     "url": "https://github.com/miszo/configs/issues"
   },
   "scripts": {
-    "eslint": "npx eslint --ignore-path .gitignore ./ --ext .js",
+    "eslint": "eslint --ignore-path .gitignore ./ --ext .js",
     "eslint:fix": "yarn run eslint --fix",
     "eslint:json": "yarn run eslint --quiet -f json -o reports/eslint.json",
     "format": "yarn run prettier --write",
     "lint:staged": "lint-staged --no-stash",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json|md)\"",
-    "prettier:check": "yarn run prettier --list-different"
+    "prettier:check": "yarn run prettier --list-different",
+    "version": "yarn"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "3.7.1",
