--- a/packages/stylelint-miszo/.eslintrc
+++ b/packages/stylelint-miszo/.eslintrc
@@ -1,1 +1,6 @@
-{ "extends": ["miszo", "miszo/prettier"] }
+{
+  "extends": ["miszo", "miszo/prettier"],
+  "rules": {
+    "no-magic-numbers": ["error", { "ignore": [0, 1, 2, 3] }]
+  }
+}
