--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -4,8 +4,7 @@ on: [pull_request]
 jobs:
   label:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/labeler@v3
         with:
-          repo-token: "${{ secrets.GH_TOKEN }}"
+          repo-token: '${{ secrets.GH_TOKEN }}'
