--- a/.github/workflows/sonar-eslint.yml
+++ b/.github/workflows/sonar-eslint.yml
@@ -9,6 +9,7 @@ on:
       - 'packages/eslint-config-miszo/**'
 jobs:
   sonar:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     env:
       PACKAGE_PATH: packages/eslint-config-miszo
