Update: Package version in sonar-project.properties

--- a/packages/stylelint-miszo/package.json
+++ b/packages/stylelint-miszo/package.json
@@ -27,7 +27,8 @@
     "lint:staged": "lint-staged --no-stash",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
     "prettier:check": "yarn run prettier --list-different",
-    "version": "yarn"
+    "version": "yarn",
+    "prepublishOnly": "node ./updateAppVersion.js"
   },
   "devDependencies": {
     "editorconfig": "0.15.3",
