--- a/packages/commitlint-config-miszo/sonar-project.properties
+++ b/packages/commitlint-config-miszo/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**
 sonar.verbose=true
 sonar.eslint.reportPaths=reports/eslint.json
+sonar.projectVersion=3.0.6
