New: Update package version with bash

--- a/packages/eslint-config-miszo/package.json
+++ b/packages/eslint-config-miszo/package.json
@@ -38,7 +38,7 @@
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
     "prettier:check": "yarn run prettier --list-different",
     "version": "yarn",
-    "prepublishOnly": "node ./updateAppVersion.js"
+    "prepublishOnly": "sh ./scripts/updateProjectVersion.sh && git add sonar-project.properties"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "3.7.1",
