--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,9 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "exact": true,
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "3.0.7",
+  "version": "3.0.6",
   "command": {
     "init": {
       "exact": true
