--- a/packages/stylelint-miszo/package.json
+++ b/packages/stylelint-miszo/package.json
@@ -27,8 +27,7 @@
     "lint:staged": "lint-staged --no-stash",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
     "prettier:check": "yarn run prettier --list-different",
-    "version": "yarn",
-    "prepublishOnly": "sh ./scripts/updateProjectVersion.sh && git add sonar-project.properties"
+    "version": "yarn"
   },
   "devDependencies": {
     "editorconfig": "0.15.3",
