--- a/.github/workflows/sonar-stylelint.yml
+++ b/.github/workflows/sonar-stylelint.yml
@@ -22,6 +22,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@master
+        with:
+          path: ${{ env.PACKAGE_PATH }}
       - name: Create ./reports folder
         run: mkdir -p ./reports
         working-directory: ${{ env.PACKAGE_PATH }}
@@ -41,6 +46,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version }}
       - uses: actions/upload-artifact@v2
         with:
           name: reports
