New: ESLint continue on error and provide report

--- a/.github/workflows/sonar-commitlint.yml
+++ b/.github/workflows/sonar-commitlint.yml
@@ -36,6 +36,7 @@ jobs:
       - name: ESLint
         run: yarn run eslint:json
         working-directory: ${{ env.PACKAGE_PATH }}
+        continue-on-error: true
       - name: Prettier
         run: yarn run prettier:check
         working-directory: ${{ env.PACKAGE_PATH }}
