--- a/packages/eslint-config-miszo/package.json
+++ b/packages/eslint-config-miszo/package.json
@@ -18,6 +18,7 @@
     "jsx-a11y.js",
     "prettier.js",
     "react.js",
+    "tsdoc.js",
     "typescript.js",
     "webpack.js",
     "rules/**"
@@ -53,6 +54,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "23.20.0",
+    "eslint-plugin-jsdoc": "30.2.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-optimize-regex": "1.2.0",
     "eslint-plugin-prettier": "3.1.4",
@@ -60,6 +62,7 @@
     "eslint-plugin-react": "7.20.5",
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-security": "1.4.0",
+    "eslint-plugin-tsdoc": "0.2.6",
     "eslint-plugin-unicorn": "21.0.0"
   },
   "devDependencies": {
