--- a/.github/workflows/sonar-commitlint.yml
+++ b/.github/workflows/sonar-commitlint.yml
@@ -9,7 +9,7 @@ on:
       - 'packages/commitlint-config-miszo/**'
 jobs:
   sonar:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "contains(github.event.head_commit.message, 'Release: v')"
     runs-on: ubuntu-latest
     env:
       PACKAGE_PATH: packages/commitlint-config-miszo
