--- a/.github/workflows/sonar-eslint.yml
+++ b/.github/workflows/sonar-eslint.yml
@@ -9,7 +9,7 @@ on:
       - 'packages/eslint-config-miszo/**'
 jobs:
   sonar:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "contains(github.event.head_commit.message, 'Release: v')"
     runs-on: ubuntu-latest
     env:
       PACKAGE_PATH: packages/eslint-config-miszo
