--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,7 +2,7 @@ name: Labeler
 on: [pull_request]
 jobs:
   label:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(github.event.head_commit.message, 'Release: v')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v3
