--- a/lerna.json
+++ b/lerna.json
@@ -15,7 +15,7 @@
       "changelogPreset": "eslint",
       "tagVersionPrefix": "v",
       "noCommitHooks": true,
-      "message": "Release: %s",
+      "message": "Release: %s [skip ci]",
       "npmClient": "yarn",
       "registry": "https://registry.npmjs.org",
       "verifyAccess": false
