--- a/.github/workflows/sonar-stylelint.yml
+++ b/.github/workflows/sonar-stylelint.yml
@@ -1,15 +1,13 @@
 name: stylelint-miszo SonarCloud
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
       - 'packages/stylelint-miszo/**'
 jobs:
   sonar:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     env:
       PACKAGE_PATH: packages/stylelint-miszo
