--- a/packages/commitlint-config-miszo/package.json
+++ b/packages/commitlint-config-miszo/package.json
@@ -23,8 +23,7 @@
     "format": "yarn run prettier --write",
     "lint:staged": "lint-staged --no-stash",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
-    "prettier:check": "yarn run prettier --list-different",
-    "version": "yarn"
+    "prettier:check": "yarn run prettier --list-different"
   },
   "devDependencies": {
     "editorconfig": "0.15.3",
