--- a/packages/eslint-config-miszo/package.json
+++ b/packages/eslint-config-miszo/package.json
@@ -37,8 +37,7 @@
     "format": "yarn run prettier --write",
     "lint:staged": "lint-staged --no-stash",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
-    "prettier:check": "yarn run prettier --list-different",
-    "version": "yarn"
+    "prettier:check": "yarn run prettier --list-different"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "3.9.1",
