--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "development-release": "lerna publish --yes --conventional-prerelease --no-changelog --no-commit-hooks"
   },
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/preset-env": "7.11.0",
-    "@commitlint/cli": "9.1.2",
-    "commitlint-config-miszo": "3.0.5",
+    "@babel/core": "7.11.6",
+    "@babel/preset-env": "7.11.5",
+    "@commitlint/cli": "11.0.0",
+    "commitlint-config-miszo": "file:./packages/commitlint-config-miszo",
     "conventional-changelog-eslint": "3.0.8",
-    "husky": "4.2.5",
+    "husky": "4.3.0",
     "lerna": "3.22.1",
-    "prettier": "2.0.5"
+    "prettier": "2.1.1"
   }
 }
