Chore: Add audit-ci on quality check

--- a/.github/workflows/sonar-commitlint.yml
+++ b/.github/workflows/sonar-commitlint.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v2.1.1
         with:
           node-version: '12.x'
-      - name: get-npm-version
+      - name: Get package version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
         with:
@@ -30,7 +30,6 @@ jobs:
         working-directory: ${{ env.PACKAGE_PATH }}
       - name: Yarn install
         run: yarn
-        working-directory: ${{ env.PACKAGE_PATH }}
       - name: ESLint
         run: yarn run eslint:json
         working-directory: ${{ env.PACKAGE_PATH }}
