--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,3 +29,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Publish packages to GitHub packages
+        run: yarn run release:github
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
