--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "exact": true,
   "npmClient": "yarn",
   "useWorkspaces": true,
@@ -17,7 +15,6 @@
       "noCommitHooks": true,
       "message": "Release: %s [skip ci]",
       "npmClient": "yarn",
-      "registry": "https://registry.npmjs.org",
       "verifyAccess": false
     }
   }
