--- a/.github/workflows/sonar-stylelint.yml
+++ b/.github/workflows/sonar-stylelint.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'packages/stylelint-miszo/**'
 jobs:
-  sonar:
+  sonar-stylelint:
     runs-on: ubuntu-latest
     env:
       PACKAGE_PATH: packages/stylelint-miszo
