--- a/.github/workflows/gh-publish.yml
+++ b/.github/workflows/gh-publish.yml
@@ -16,9 +16,14 @@ jobs:
         uses: actions/setup-node@v2.1.1
         with:
           node-version: '12.x'
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: 'https://registry.npmjs.org'
       - name: Yarn install
         run: yarn
+      - name: Setup GitHub registry
+        uses: actions/setup-node@v2.1.1
+        with:
+          node-version: '12.x'
+          registry-url: 'https://npm.pkg.github.com'
       - name: Publish commitlint-config-miszo to GitHub packages
         run: yarn publish
         working-directory: ${{ env.COMMITLINT }}
