--- a/.github/workflows/gh-publish.yml
+++ b/.github/workflows/gh-publish.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com'
+          scope: '@miszo'
       - name: Publish commitlint-config-miszo to GitHub packages
         run: yarn publish
         working-directory: ${{ env.COMMITLINT }}
