--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-miszo",
+  "name": "@miszo/eslint-config",
   "version": "3.0.27",
   "description": "ESLint rules for my projects.",
   "homepage": "https://github.com/miszo/configs/tree/main/packages/eslint-config-miszo#readme",
