--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,10 +1,10 @@
 miszo-configs:
   - /*
-commitlint-config-miszo:
-  - packages/commitlint-config-miszo/**/*
-eslint-config-miszo:
-  - packages/eslint-config-miszo/**/*
-stylelint-miszo:
-  - packages/stylelint-miszo/**/*
+'@miszo/commitlint':
+  - packages/commitlint/**/*
+'@miszo/eslint-config':
+  - packages/eslint-config/**/*
+'@miszo/stylelint':
+  - packages/stylelint/**/*
 github-workflows:
   - .github/workflows/**/*
