--- a/packages/stylelint/sonar-project.properties
+++ b/packages/stylelint/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=miszo
 sonar.projectKey=stylelint-miszo
-sonar.projectName=stylelint-miszo
+sonar.projectName=@miszo/stylelint
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
