--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,59 +1,59 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "20:00"
-      timezone: "Europe/Warsaw"
+      interval: 'weekly'
+      day: 'sunday'
+      time: '20:00'
+      timezone: 'Europe/Warsaw'
     open-pull-requests-limit: 10
     labels:
       - dependabot
 
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "20:00"
-      timezone: "Europe/Warsaw"
-    open-pull-requests-limit: 10
-    versioning-strategy: increase-if-necessary
-    labels:
-      - dependabot
-
-  - package-ecosystem: "npm"
-    directory: "/packages/commitlint-config-miszo"
-    schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "20:00"
-      timezone: "Europe/Warsaw"
+      interval: 'weekly'
+      day: 'sunday'
+      time: '20:00'
+      timezone: 'Europe/Warsaw'
     open-pull-requests-limit: 10
     versioning-strategy: increase-if-necessary
     labels:
       - dependabot
 
-  - package-ecosystem: "npm"
-    directory: "/packages/eslint-config-miszo"
+  - package-ecosystem: 'npm'
+    directory: '/packages/commitlint'
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "20:00"
-      timezone: "Europe/Warsaw"
+      interval: 'weekly'
+      day: 'sunday'
+      time: '20:00'
+      timezone: 'Europe/Warsaw'
     open-pull-requests-limit: 10
     versioning-strategy: increase-if-necessary
     labels:
       - dependabot
 
-  - package-ecosystem: "npm"
-    directory: "/packages/stylelint-miszo"
+  - package-ecosystem: 'npm'
+    directory: '/packages/eslint-config'
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "20:00"
-      timezone: "Europe/Warsaw"
+      interval: 'weekly'
+      day: 'sunday'
+      time: '20:00'
+      timezone: 'Europe/Warsaw'
+    open-pull-requests-limit: 10
+    versioning-strategy: increase-if-necessary
+    labels:
+      - dependabot
+
+  - package-ecosystem: 'npm'
+    directory: '/packages/stylelint'
+    schedule:
+      interval: 'weekly'
+      day: 'sunday'
+      time: '20:00'
+      timezone: 'Europe/Warsaw'
     open-pull-requests-limit: 10
     versioning-strategy: increase-if-necessary
     labels:
