--- a/packages/commitlint/sonar-project.properties
+++ b/packages/commitlint/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=miszo
 sonar.projectKey=commitlint-config-miszo
-sonar.projectName=commitlint-config-miszo
+sonar.projectName=@miszo/commitlint
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
