--- a/packages/eslint-config/sonar-project.properties
+++ b/packages/eslint-config/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=miszo
 sonar.projectKey=eslint-config-miszo
-sonar.projectName=eslint-config-miszo
+sonar.projectName=@miszo/eslint-config
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
