--- a/packages/commitlint/package.json
+++ b/packages/commitlint/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "editorconfig": "0.15.3",
     "eslint": "7.8.1",
-    "eslint-config-miszo": "3.0.28",
+    "@miszo/eslint-config": "3.0.28",
     "husky": "4.3.0",
     "lint-staged": "10.3.0",
     "prettier": "2.1.1"
