--- a/packages/commitlint-config/sonar-project.properties
+++ b/packages/commitlint-config/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=miszo
-sonar.projectKey=commitlint-config-miszo
-sonar.projectName=@miszo/commitlint
+sonar.projectKey=commitlint-config
+sonar.projectName=@miszo/commitlint-config
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
