--- a/.github/workflows/gh-publish.yml
+++ b/.github/workflows/gh-publish.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v2.1.1
         with:
           node-version: '12.x'
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: 'https://npm.pkg.github.com/miszo/'
       - name: Publish commitlint-config-miszo to GitHub packages
         run: yarn publish
         working-directory: ${{ env.COMMITLINT }}
